2000-08-31  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/Makefile.am: Install load-gnomecard-addressbook
	and load-pine-addressbook.

2000-08-30  Lauris Kaplinski  <lauris@helixcode.com>

	* printing/e-contact-print.c: Countless small changes for gnome-print 0.21+

2000-08-30  Dan Winship  <danw@helixcode.com>

	* gui/component/addressbook.oafinfo: Add a name to the minicard
	viewer.

2000-08-29  Dan Winship  <danw@helixcode.com>

	* backend/ebook/e-book.c: 
	* backend/ebook/test-client.c: 
	* backend/ebook/test-client-list.c: 
	* backend/ebook/load-gnomecard-addressbook.c: 
	* backend/ebook/load-pine-addressbook.c: 
	* backend/pas/pas-book-factory.c: 
	* conduit/address-conduit.h: Remove USING_OAF checks

2000-08-28  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c: Use the right argument name to turn
	on grid lines.

2000-08-26  JP Rosevear  <jpr@helixcode.com>

	* gui/minicard/Makefile.am: Comment out minicard-view-test
	since its gnorba dependent
	
2000-08-26  JP Rosevear  <jpr@helixcode.com>

	* gui/component/addressbook-component.c: Remove gnorba stuff

	* gui/minicard/e-minicard-control.c (e_minicard_control_factory_init):
	ditto

	* gui/component/addressbook.c: ditto

	* gui/component/addressbook-factory.c: ditto

2000-08-25  Christopher James Lahey  <clahey@helixcode.com>

	* demo/* Removed the demo directory since it's no longer used.

2000-08-26  JP Rosevear  <jpr@helixcode.com>

	* gui/minicard/Makefile.am: Remove gnorba stuff

	* gui/minicard/e-minicard-control.gnorba: Kill
	
2000-08-26  JP Rosevear  <jpr@helixcode.com>

	* gui/component/addressbook.gnorba: Kill

	* gui/component/Makefile.am:  Remove gnorba stuff

2000-08-25  Dan Winship  <danw@helixcode.com>

	* gui/component/Makefile.am (evolution_addressbook_LDFLAGS): Add
	-export-dynamic so libglade will be able to resolve custom widget
	callbacks.

2000-08-23  Lauris Kaplinski  <lauris@helixcode.com>
